--- a/generator/src/lib/tsconfig.json
+++ b/generator/src/lib/tsconfig.json
@@ -1,17 +1,16 @@
 {
-  "include": ["src/**/*", "types.d.ts"],
-  "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
   "compilerOptions": {
-    "target": "es2017",
-    "module": "es2020",
+    "target": "es2019",
+    "module": "esnext",
     "moduleResolution": "node",
-    "importsNotUsedAsValues": "error",
-    "isolatedModules": true,
+    "lib": ["ESNext", "DOM"],
+    "outDir": "../../lib",
     "sourceMap": true,
+    "declaration": true,
     "allowSyntheticDefaultImports": true,
-    "types": ["svelte", "@types/snowpack-env"],
     "strict": true,
     "esModuleInterop": true,
+    "incremental": true,
     "skipLibCheck": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
