--- a/package.json
+++ b/package.json
@@ -1,31 +1,13 @@
 {
+  "name": "pigeon-project",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "generator"
+  ],
   "scripts": {
-    "dev": "snowpack dev",
-    "build": "snowpack build",
-    "clean": "rm -r ./dist ./build >/dev/null 2>&1 ||:"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@snowpack/plugin-babel": "^2.1.5",
-    "@snowpack/plugin-dotenv": "^2.0.5",
-    "@snowpack/plugin-svelte": "^3.4.0",
-    "@types/feather-icons": "^4.7.0",
-    "@types/snowpack-env": "^2.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "eslint": "^7.17.0",
-    "feather-icons": "^4.28.0",
-    "modern-normalize": "^1.0.0",
-    "sass": "^1.32.0",
-    "snowpack": "^3.0.0-rc.2",
-    "svelte": "^3.24.0",
-    "svelte-check": "^1.1.24",
-    "svelte-hmr": "^0.12.2",
-    "svelte-preprocess": "^4.6.1",
-    "svelte-spa-router": "^3.1.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "postinstall": "yarn workspace pigeon-generator build",
+    "dev": "yarn workspace pigeon-frontend dev",
+    "build": "yarn workspace pigeon-frontend build"
   }
 }
