--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@snowpack/plugin-svelte": "^3.4.0",
     "@types/feather-icons": "^4.7.0",
     "@types/node": "^14.14.20",
+    "@types/qs": "^6.9.5",
     "@types/snowpack-env": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
@@ -26,6 +27,7 @@
     "modern-normalize": "^1.0.0",
     "nanoid": "^3.1.20",
     "pigeon-generator": "1.0.0",
+    "qs": "^6.9.4",
     "sass": "^1.32.0",
     "snowpack": "^3.0.0-rc.2",
     "svelte": "^3.24.0",
