--- a/build-manifest.json
+++ b/build-manifest.json
@@ -5,18 +5,18 @@
       "imports": []
     },
     "_dist_/App.css": {
-      "bytes": 1542,
+      "bytes": 1567,
       "imports": []
     },
-    "web_modules/common/index-5064bbf8.js": {
-      "bytes": 17550,
+    "web_modules/common/index-d676c8bd.js": {
+      "bytes": 19587,
       "imports": []
     },
     "web_modules/svelte/internal.js": {
-      "bytes": 471,
+      "bytes": 665,
       "imports": [
         {
-          "path": "web_modules/common/index-5064bbf8.js"
+          "path": "web_modules/common/index-d676c8bd.js"
         }
       ]
     },
@@ -28,7 +28,7 @@
       "bytes": 26269,
       "imports": [
         {
-          "path": "web_modules/common/index-5064bbf8.js"
+          "path": "web_modules/common/index-d676c8bd.js"
         },
         {
           "path": "web_modules/common/wrap-aa6f377e.js"
@@ -44,7 +44,7 @@
       ]
     },
     "_dist_/components/AppBar.css": {
-      "bytes": 346,
+      "bytes": 406,
       "imports": []
     },
     "_dist_/components/PigeonIcon.css": {
@@ -63,7 +63,7 @@
       ]
     },
     "_dist_/components/AppBar.js": {
-      "bytes": 1407,
+      "bytes": 1409,
       "imports": [
         {
           "path": "_dist_/components/AppBar.css"
@@ -84,7 +84,7 @@
       "bytes": 347,
       "imports": [
         {
-          "path": "web_modules/common/index-5064bbf8.js"
+          "path": "web_modules/common/index-d676c8bd.js"
         }
       ]
     },
@@ -139,33 +139,205 @@
       ]
     },
     "web_modules/pigeon-generator.js": {
-      "bytes": 4318,
+      "bytes": 8626,
       "imports": []
     },
-    "_dist_/pages/Page2.js": {
-      "bytes": 972,
+    "_dist_/pages/User.css": {
+      "bytes": 2470,
+      "imports": []
+    },
+    "web_modules/qs.js": {
+      "bytes": 24386,
+      "imports": []
+    },
+    "_dist_/components/PostCard.css": {
+      "bytes": 3268,
+      "imports": []
+    },
+    "_dist_/util.js": {
+      "bytes": 83,
+      "imports": []
+    },
+    "web_modules/feather-icons.js": {
+      "bytes": 158964,
+      "imports": []
+    },
+    "_dist_/components/Icon.js": {
+      "bytes": 1441,
       "imports": [
         {
           "path": "web_modules/svelte/internal.js"
         },
         {
-          "path": "web_modules/svelte/transition.js"
+          "path": "web_modules/feather-icons.js"
         }
       ]
     },
-    "_dist_/pages/Page3.js": {
-      "bytes": 972,
+    "_dist_/components/PostCard.js": {
+      "bytes": 15910,
       "imports": [
+        {
+          "path": "_dist_/components/PostCard.css"
+        },
         {
           "path": "web_modules/svelte/internal.js"
         },
         {
+          "path": "web_modules/svelte-spa-router.js"
+        },
+        {
+          "path": "_dist_/util.js"
+        },
+        {
+          "path": "_dist_/components/Icon.js"
+        }
+      ]
+    },
+    "_dist_/pages/User.js": {
+      "bytes": 28095,
+      "imports": [
+        {
+          "path": "_dist_/pages/User.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "web_modules/qs.js"
+        },
+        {
+          "path": "web_modules/svelte-spa-router.js"
+        },
+        {
           "path": "web_modules/svelte/transition.js"
+        },
+        {
+          "path": "_dist_/components/PostCard.js"
+        }
+      ]
+    },
+    "_dist_/pages/Followers.css": {
+      "bytes": 274,
+      "imports": []
+    },
+    "_dist_/components/IconButton.css": {
+      "bytes": 298,
+      "imports": []
+    },
+    "_dist_/components/IconButton.js": {
+      "bytes": 2405,
+      "imports": [
+        {
+          "path": "_dist_/components/IconButton.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "_dist_/components/Icon.js"
+        }
+      ]
+    },
+    "_dist_/components/UserCard.css": {
+      "bytes": 1248,
+      "imports": []
+    },
+    "_dist_/components/UserCard.js": {
+      "bytes": 6251,
+      "imports": [
+        {
+          "path": "_dist_/components/UserCard.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "web_modules/svelte-spa-router.js"
+        }
+      ]
+    },
+    "_dist_/pages/Followers.js": {
+      "bytes": 10212,
+      "imports": [
+        {
+          "path": "_dist_/pages/Followers.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "web_modules/svelte-spa-router.js"
+        },
+        {
+          "path": "web_modules/svelte/transition.js"
+        },
+        {
+          "path": "_dist_/components/IconButton.js"
+        },
+        {
+          "path": "_dist_/components/UserCard.js"
+        }
+      ]
+    },
+    "_dist_/pages/Following.css": {
+      "bytes": 274,
+      "imports": []
+    },
+    "_dist_/pages/Following.js": {
+      "bytes": 10212,
+      "imports": [
+        {
+          "path": "_dist_/pages/Following.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "web_modules/svelte-spa-router.js"
+        },
+        {
+          "path": "web_modules/svelte/transition.js"
+        },
+        {
+          "path": "_dist_/components/IconButton.js"
+        },
+        {
+          "path": "_dist_/components/UserCard.js"
+        }
+      ]
+    },
+    "_dist_/pages/Post.css": {
+      "bytes": 264,
+      "imports": []
+    },
+    "_dist_/pages/Post.js": {
+      "bytes": 9850,
+      "imports": [
+        {
+          "path": "_dist_/pages/Post.css"
+        },
+        {
+          "path": "web_modules/svelte/internal.js"
+        },
+        {
+          "path": "web_modules/svelte-spa-router.js"
+        },
+        {
+          "path": "web_modules/svelte/transition.js"
+        },
+        {
+          "path": "_dist_/components/IconButton.js"
+        },
+        {
+          "path": "_dist_/components/PostCard.js"
+        },
+        {
+          "path": "_dist_/util.js"
         }
       ]
     },
     "_dist_/App.js": {
-      "bytes": 2253,
+      "bytes": 2595,
       "imports": [
         {
           "path": "_dist_/App.css"
@@ -195,10 +367,16 @@
           "path": "web_modules/pigeon-generator.js"
         },
         {
-          "path": "_dist_/pages/Page2.js"
+          "path": "_dist_/pages/User.js"
         },
         {
-          "path": "_dist_/pages/Page3.js"
+          "path": "_dist_/pages/Followers.js"
+        },
+        {
+          "path": "_dist_/pages/Following.js"
+        },
+        {
+          "path": "_dist_/pages/Post.js"
         }
       ]
     },
@@ -218,7 +396,7 @@
     "../node_modules/.cache/snowpack/~~bundle~~/_dist_/index.js": {
       "imports": [
         {
-          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/chunk.2RPK45OS.js"
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/chunk.KG6B6XGW.js"
         }
       ],
       "exports": [
@@ -226,19 +404,19 @@
       ],
       "inputs": {
         "__snowpack__/env.js": {
-          "bytesInOutput": 56
+          "bytesInOutput": 55
         },
         "_dist_/App.css": {
           "bytesInOutput": 0
         },
-        "web_modules/common/index-5064bbf8.js": {
-          "bytesInOutput": 1445
+        "web_modules/common/index-d676c8bd.js": {
+          "bytesInOutput": 633
         },
         "web_modules/common/wrap-aa6f377e.js": {
           "bytesInOutput": 873
         },
         "web_modules/svelte-spa-router.js": {
-          "bytesInOutput": 5879
+          "bytesInOutput": 4723
         },
         "web_modules/svelte-spa-router/wrap.js": {
           "bytesInOutput": 0
@@ -250,22 +428,22 @@
           "bytesInOutput": 0
         },
         "_dist_/components/PigeonIcon.js": {
-          "bytesInOutput": 540
+          "bytesInOutput": 542
         },
         "_dist_/components/AppBar.js": {
-          "bytesInOutput": 400
+          "bytesInOutput": 402
         },
         "_dist_/components/Loading.css": {
           "bytesInOutput": 0
         },
         "_dist_/components/Loading.js": {
-          "bytesInOutput": 776
+          "bytesInOutput": 775
         },
         "_dist_/pages/Home.css": {
           "bytesInOutput": 0
         },
         "_dist_/pages/Home.js": {
-          "bytesInOutput": 726
+          "bytesInOutput": 728
         },
         "_dist_/pages/NotFound.css": {
           "bytesInOutput": 0
@@ -274,52 +452,248 @@
           "bytesInOutput": 472
         },
         "web_modules/pigeon-generator.js": {
-          "bytesInOutput": 2602
+          "bytesInOutput": 5550
         },
         "_dist_/App.js": {
-          "bytesInOutput": 694
+          "bytesInOutput": 1008
         },
         "_dist_/index.js": {
-          "bytesInOutput": 127
+          "bytesInOutput": 126
         }
       },
-      "bytes": 14807
+      "bytes": 16171
     },
-    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Page2.js": {
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/User.js": {
       "imports": [
         {
-          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.2RPK45OS.js"
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.XUPGBPIZ.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.KG6B6XGW.js"
         }
       ],
       "exports": [
         "default"
       ],
       "inputs": {
-        "_dist_/pages/Page2.js": {
-          "bytesInOutput": 250
+        "_dist_/pages/User.css": {
+          "bytesInOutput": 0
+        },
+        "web_modules/common/index-d676c8bd.js": {
+          "bytesInOutput": 49
+        },
+        "web_modules/qs.js": {
+          "bytesInOutput": 10317
+        },
+        "_dist_/pages/User.js": {
+          "bytesInOutput": 9178
         }
       },
-      "bytes": 389
+      "bytes": 19923
     },
-    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Page3.js": {
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Followers.js": {
       "imports": [
         {
-          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.2RPK45OS.js"
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.2G4ITCNO.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.3EU24D2T.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.KG6B6XGW.js"
         }
       ],
       "exports": [
         "default"
       ],
       "inputs": {
-        "_dist_/pages/Page3.js": {
-          "bytesInOutput": 250
+        "_dist_/pages/Followers.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/pages/Followers.js": {
+          "bytesInOutput": 2976
         }
       },
-      "bytes": 389
+      "bytes": 3380
     },
-    "../node_modules/.cache/snowpack/~~bundle~~/chunk.2RPK45OS.js": {
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Following.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.2G4ITCNO.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.3EU24D2T.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "default"
+      ],
+      "inputs": {
+        "_dist_/pages/Following.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/pages/Following.js": {
+          "bytesInOutput": 2976
+        }
+      },
+      "bytes": 3380
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.2G4ITCNO.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "a"
+      ],
+      "inputs": {
+        "_dist_/components/UserCard.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/components/UserCard.js": {
+          "bytesInOutput": 2213
+        }
+      },
+      "bytes": 2472
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Post.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.XUPGBPIZ.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.3EU24D2T.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "default"
+      ],
+      "inputs": {
+        "_dist_/pages/Post.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/pages/Post.js": {
+          "bytesInOutput": 3008
+        }
+      },
+      "bytes": 3430
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.XUPGBPIZ.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "a",
+        "b"
+      ],
+      "inputs": {
+        "_dist_/components/PostCard.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/util.js": {
+          "bytesInOutput": 23
+        },
+        "_dist_/components/PostCard.js": {
+          "bytesInOutput": 5981
+        }
+      },
+      "bytes": 6325
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.3EU24D2T.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.37OIGOVV.js"
+        },
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "a",
+        "b"
+      ],
+      "inputs": {
+        "_dist_/components/IconButton.css": {
+          "bytesInOutput": 0
+        },
+        "_dist_/components/IconButton.js": {
+          "bytesInOutput": 767
+        },
+        "web_modules/svelte-spa-router.js": {
+          "bytesInOutput": 51
+        }
+      },
+      "bytes": 1033
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.37OIGOVV.js": {
+      "imports": [
+        {
+          "path": "../node_modules/.cache/snowpack/~~bundle~~/chunk.KG6B6XGW.js"
+        }
+      ],
+      "exports": [
+        "a",
+        "b",
+        "c",
+        "d",
+        "e",
+        "f",
+        "g"
+      ],
+      "inputs": {
+        "web_modules/common/index-d676c8bd.js": {
+          "bytesInOutput": 923
+        },
+        "web_modules/feather-icons.js": {
+          "bytesInOutput": 88051
+        },
+        "_dist_/components/Icon.js": {
+          "bytesInOutput": 445
+        },
+        "web_modules/svelte-spa-router.js": {
+          "bytesInOutput": 264
+        }
+      },
+      "bytes": 90004
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.KG6B6XGW.js": {
       "imports": [],
       "exports": [
+        "A",
+        "B",
+        "C",
+        "D",
+        "E",
+        "F",
+        "G",
+        "H",
         "a",
         "b",
         "c",
@@ -339,11 +713,20 @@
         "q",
         "r",
         "s",
-        "t"
+        "t",
+        "u",
+        "v",
+        "w",
+        "x",
+        "y",
+        "z"
       ],
       "inputs": {
-        "web_modules/common/index-5064bbf8.js": {
-          "bytesInOutput": 4413
+        "web_modules/common/index-d676c8bd.js": {
+          "bytesInOutput": 5238
+        },
+        "web_modules/svelte-spa-router.js": {
+          "bytesInOutput": 1154
         },
         "web_modules/svelte/internal.js": {
           "bytesInOutput": 0
@@ -352,16 +735,16 @@
           "bytesInOutput": 149
         }
       },
-      "bytes": 4719
+      "bytes": 6797
     },
     "../node_modules/.cache/snowpack/~~bundle~~/_dist_/index.css": {
       "imports": [],
       "inputs": {
         "_dist_/App.css": {
-          "bytesInOutput": 1482
+          "bytesInOutput": 1507
         },
         "_dist_/components/AppBar.css": {
-          "bytesInOutput": 306
+          "bytesInOutput": 367
         },
         "_dist_/components/Loading.css": {
           "bytesInOutput": 678
@@ -376,7 +759,70 @@
           "bytesInOutput": 83
         }
       },
-      "bytes": 3049
+      "bytes": 3135
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/User.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/pages/User.css": {
+          "bytesInOutput": 2432
+        }
+      },
+      "bytes": 2433
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Followers.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/pages/Followers.css": {
+          "bytesInOutput": 233
+        }
+      },
+      "bytes": 234
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Following.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/pages/Following.css": {
+          "bytesInOutput": 233
+        }
+      },
+      "bytes": 234
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.4X2UCLW6.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/components/UserCard.css": {
+          "bytesInOutput": 1214
+        }
+      },
+      "bytes": 1215
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/_dist_/pages/Post.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/pages/Post.css": {
+          "bytesInOutput": 228
+        }
+      },
+      "bytes": 229
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.FHKWED34.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/components/PostCard.css": {
+          "bytesInOutput": 3231
+        }
+      },
+      "bytes": 3232
+    },
+    "../node_modules/.cache/snowpack/~~bundle~~/chunk.FL2QTJT7.css": {
+      "imports": [],
+      "inputs": {
+        "_dist_/components/IconButton.css": {
+          "bytesInOutput": 264
+        }
+      },
+      "bytes": 265
     }
   }
 }
