--- a/generator/package.json
+++ b/generator/package.json
@@ -13,12 +13,12 @@
     "build": "yarn gen:build && yarn make && yarn lib:build"
   },
   "dependencies": {
-    "fs-extra": "^9.0.1"
+    "date-fns": "^2.16.1",
+    "fs-extra": "^9.1.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.6",
-    "@types/node": "^14.14.20",
-    "ts-loader": "^8.0.14",
+    "@types/node": "^14.14.22",
     "typescript": "^4.1.3"
   }
 }
