--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: yarn
       - run: yarn build
+        env:
+          CI: true
       - name: deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         with:
